#13 Added buttons for hyperbolic functions.

--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -612,6 +612,60 @@ limitations under the License. -->
                         </Button>
                     </Grid>
                 </Expander>
+                <Expander x:Name="hyperbolicToolBar" Header="Hyperbolic">
+                    <Grid Margin="0,4,0,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+
+                        <Button Grid.Row="0" Grid.Column="0" Tag="sinh" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource sinh}" Width="36" Height="20" />
+                        </Button>
+                        <Button Grid.Row="0" Grid.Column="1" Tag="cosh" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource cosh}" Width="36" Height="20" />
+                        </Button>
+                        <Button Grid.Row="0" Grid.Column="2" Tag="tanh" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource tanh}" Width="36" Height="20" />
+                        </Button>
+                        <Button Grid.Row="0" Grid.Column="3" Tag="coth" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource coth}" Width="36" Height="20" />
+                        </Button>
+
+                        <Button Grid.Row="1" Grid.Column="0" Tag="arsinh" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource arsinh}" Width="40" Height="20" />
+                        </Button>
+                        <Button Grid.Row="1" Grid.Column="1" Tag="arcosh" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource arcosh}" Width="40" Height="20" />
+                        </Button>
+                        <Button Grid.Row="1" Grid.Column="2" Tag="artanh" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource artanh}" Width="40" Height="20" />
+                        </Button>
+                        <Button Grid.Row="1" Grid.Column="3" Tag="arcoth" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource arcoth}" Width="40" Height="20" />
+                        </Button>
+
+                        <Button Grid.Row="2" Grid.Column="0" Tag="sech" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource sech}" Width="36" Height="20" />
+                        </Button>
+                        <Button Grid.Row="2" Grid.Column="1" Tag="csch" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource csch}" Width="36" Height="20" />
+                        </Button>
+                        <Button Grid.Row="2" Grid.Column="2" Tag="arsech" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource arsech}" Width="40" Height="20" />
+                        </Button>
+                        <Button Grid.Row="2" Grid.Column="3" Tag="arcsch" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource arcsch}" Width="40" Height="20" />
+                        </Button>
+                    </Grid>
+                </Expander>
                 <Expander x:Name="constantsMathToolBar" Header="Constants">
                     <Grid>
                         <Grid.RowDefinitions>
