--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -439,6 +439,11 @@ limitations under the License. -->
 
                     <TextBox x:Name="truthTableExpressionBox" Grid.Row="0" FontFamily="Lucida Calligraphy" FontSize="16" Foreground="Black" KeyUp="truthTableExpressionBox_KeyUp" />
                     <ListView x:Name="truthTableList" Grid.Row="1">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="{x:Type ListViewItem}">
+                                <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            </Style>
+                        </ListView.ItemContainerStyle>
                         <ListView.View>
                             <GridView x:Name="truthTableGridView" />
                         </ListView.View>
