--- a/xFunc/Views/AboutView.xaml
+++ b/xFunc/Views/AboutView.xaml
@@ -15,21 +15,22 @@ limitations under the License. -->
 <Window x:Class="xFunc.Views.AboutView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="About" Width="440" Height="380" WindowStartupLocation="CenterOwner"
+        xmlns:res="clr-namespace:xFunc.Resources"
+        Title="{x:Static res:Resource.AboutWindowTitle}" Width="440" Height="380" WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid>
         <Image Source="..\Images\xFunc.ico" Width="64" Height="64" Margin="12,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <TextBlock Text="xFunc" FontSize="22" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0" />
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0">
-            <Run Text="Version:" />
+            <Run Text="{x:Static res:Resource.VersionTextBox}" />
             <Run x:Name="versionNumber" />
         </TextBlock>
         <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="12,79,0,0">
-            <Run Text="Author:" />
-            <Run Text="Dmitry Kischenko" />
+            <Run Text="{x:Static res:Resource.AuthorTextBox}" />
+            <Run Text="{x:Static res:Resource.Author}" />
         </TextBlock>
         <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="12,100,0,0">
-            <Run Text="Home Page:" />
+            <Run Text="{x:Static res:Resource.HomePageTextBox}" />
             <Hyperlink x:Name="link" NavigateUri="http://xfunc.codeplex.com/">http://xfunc.codeplex.com/</Hyperlink>
         </TextBlock>
         <GroupBox HorizontalAlignment="Center" VerticalAlignment="Top" Margin="12,121,10,0" Height="194" Width="412" Header="Apache License 2.0">
