--- a/xFunc/Views/PlottingGraph.xaml
+++ b/xFunc/Views/PlottingGraph.xaml
@@ -15,6 +15,7 @@ limitations under the License. -->
 <UserControl x:Class="xFunc.Views.PlottingGraph"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:res="clr-namespace:xFunc.Resources"
              xmlns:views="clr-namespace:xFunc.Views"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -36,7 +37,7 @@ limitations under the License. -->
                 </Grid.ColumnDefinitions>
 
                 <TextBlock x:Name="point" Grid.Column="0" Margin="8,8,0,8" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" />
-                <CheckBox x:Name="renderGrid" Grid.Column="1" Margin="8,8,0,8" IsChecked="True" Content="Show Grid" VerticalAlignment="Center" />
+                <CheckBox x:Name="renderGrid" Grid.Column="1" Margin="8,8,0,8" IsChecked="True" Content="{x:Static res:Resource.ShowGridCheckBox}" VerticalAlignment="Center" />
                 <Slider x:Name="slider" Grid.Column="2" Minimum="0.1" Maximum="5" Value="1" SmallChange="0.1" LargeChange="1.0"  Margin="8,8,8,8" HorizontalAlignment="Stretch" AutoToolTipPrecision="2" AutoToolTipPlacement="BottomRight" TickPlacement="TopLeft" Ticks="0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 2, 3, 4, 5" />
             </Grid>
         </Border>
