--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -132,7 +132,7 @@ limitations under the License. -->
                     </ribbon:ToggleButton>
                 </ribbon:RibbonGroupBox>
             </ribbon:RibbonTabItem>
-            <ribbon:RibbonTabItem Header="{x:Static res:Resource.InsertRibbonTab}">
+            <!--<ribbon:RibbonTabItem Header="{x:Static res:Resource.InsertRibbonTab}">
                 <ribbon:RibbonGroupBox Header="{x:Static res:Resource.VariablesGroupHeader}">
                     <ribbon:SplitButton Header="Vars" ResizeMode="Both" Icon="../Images/Vars.png" LargeIcon="../Images/VarsLarge.png">
                         <ribbon:Gallery MinItemsInRow="2" MaxItemsInRow="6" ItemWidth="24" ItemHeight="24" GroupBy="Tag" SelectedFilter="{Binding ElementName=defalutGroup}">
@@ -305,7 +305,7 @@ limitations under the License. -->
                         </ribbon:Gallery>
                     </ribbon:SplitButton>
                 </ribbon:RibbonGroupBox>
-            </ribbon:RibbonTabItem>
+            </ribbon:RibbonTabItem>-->
             <ribbon:RibbonTabItem Header="{x:Static res:Resource.ViewRibbonTab}">
                 <ribbon:RibbonGroupBox Header="{x:Static res:Resource.FontGroupHeader}">
                     <ribbon:Spinner x:Name="fontSizeSpinner" Header="{x:Static res:Resource.FontSizeSpinner}" Width="90" Minimum="8" Maximum="96" Value="24" TextBlock.TextAlignment="Right" Format="" />
