--- a/xFunc/Views/AboutView.xaml
+++ b/xFunc/Views/AboutView.xaml
@@ -17,7 +17,8 @@ limitations under the License. -->
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:res="clr-namespace:xFunc.Resources"
         Title="{x:Static res:Resource.AboutWindowTitle}" Width="440" Height="380" WindowStartupLocation="CenterOwner"
-        ResizeMode="NoResize" ShowInTaskbar="False">
+        ResizeMode="NoResize" ShowInTaskbar="False"
+        TextOptions.TextFormattingMode="Display">
     <Grid>
         <Image Source="..\Images\xFunc.ico" Width="64" Height="64" Margin="12,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <TextBlock Text="xFunc" FontSize="22" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0" />
